Fix spacing of no-text icons
Previous to the addition of bootstrap, our :before and :after
pseudo-elements were not box-sizing: border-box, which their spacing
depended on.

This adds padding: 0 to the no-text versions of the icons, which removed
the right padding that is needed for the icons when combined with a
button.

--- a/backend/app/assets/stylesheets/spree/backend/shared/_tables.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_tables.scss
@@ -53,6 +53,7 @@ table {
 
         &:before {
           text-align: center !important;
+          padding: 0;
           width: 27px;
           display: inline-block;
         }
